syntax = "proto3";
package worker;

import "gogoproto/gogo.proto";
import "client/pfs/pfs.proto";

message ProcessRequest {
  // ID of the job for which we're processing 'data'. This is attached to logs
  // generated while processing 'data', so that they can be searched.
  string job_id = 2 [(gogoproto.customname) = "JobID"];

  // The datum to process
  repeated pfs.FileInfo data = 1;
}

// ProcessResponse contains either a tag, if the processing was successful,
// or a log that's the combination of stdout+stderr, if the processing
// was unsuccessful.
// TODO: allow for capturing logs even if processing was successful.
message ProcessResponse {
  pfs.Tag tag = 1;
}

service Worker {
  rpc Process(ProcessRequest) returns (ProcessResponse) {}
}
